@@ -1,3 +1,8 @@
+2008-11-25  Michael Hutchinson  <mhutchinson@novell.com>
+
+	* MonoDevelop.Xml.StateEngine/XmlTagState.cs: Remove multiple root
+	element validation from here because it's not easy to override.
+
 2008-11-25  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* Makefile.am:
